src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account.Account_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This contact receives invoices/dunning communication</description>
        <label>Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Case_Number__c</fullName>
        <formula>Last_Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Survey__c</fullName>
        <label>Last Survey</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Text__c</fullName>
        <label>Primary Contact Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Main contact person for DAZN Sales and Customer service.</description>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if this is test record.</description>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Direct_Customer</fullName>
        <active>true</active>
        <label>Direct Customer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_format_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
	NOT( ISBLANK( Email ) ), 
	NOT( REGEX(Email, &quot;((?=(^.{0,80}$))(^[ ]*[a-zA-Z0-9!#$%&amp;&apos;*/=?^_+\\-`{|}&apos;\\-]+(?:\\.[a-zA-Z0-9!#$%&amp;&apos;*/=?^_+\\-`{|}&apos;\\-]+)*@(?!.*\\.com\\.com$)(?!(?:g[mn]ial|ga[m]?il|gmal|google(?:mai|nail)|(?:gi|goole|googe|googl|hto|ho|ht|hit)mail|g[g]?og[g]?le|googke|ym[ia]l|ymai(ll)?|yhoo|yahooo|yaho|yaoo|[v]?ahoo|hotmi[a]?l|hotmal|t[.]?online|t-onlin[d]?|t-onlie|t-on[li]ne|t-[on]line|t-onllne|[il]coud|iloud|(?:rcoketmail|rocketm[ai]l|rocketmai|rocktmail|rcketmail|rokcetmail)\\.com|hotmail\\.fe)\\b)(?!(?:yahoo\\.ne|aoi\\.com|gmx\\.(?:st|ne)|(?:gmc|bl[eu]win)\\.ch|(?:[dfh]mx|g[x]?m|g(?:mm|n|mx)?x)\\.(?:net|de)|t-online\\.com|ewwetel\\.net|(?:rvants|we[n]?|eeb|w[wr]?b)\\.de)$)[0-9a-zA-Z]+(-*[0-9a-zA-Z])*(\\.[0-9a-zA-Z]+(-*[0-9a-zA-Z])*)*(?!(?:\\.co[nk]|\\.c[ipl]?m|\\.coom|\\.o[c]?m|\\.dom|\\.nfo|\\.inf|\\.i[nf]o|\\.d[cardo])\\b)\\.[a-zA-Z0-9]{2,63}[ ]*$))&quot;))
)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Invalid email provided. Please check your input data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalidated_Phone_Number</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX(MobilePhone, &quot;^([0-9]{7,15})$&quot;))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Invalid phone number provided. Please check your input data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_phone_format_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
	NOT( ISBLANK( MobilePhone )), 
	NOT(REGEX(MobilePhone, &quot;^(\\+[0-9]{10,18})$&quot;))
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Invalid phone number provided. Please check your input data.</errorMessage>
    </validationRules>
</CustomObject>